--- a/css/style.css
+++ b/css/style.css
@@ -92,3 +92,83 @@ line-height: 1.1;
   background: blue;
 }
 
+/* section: what we do */
+.items{
+  display: flex;
+  padding: 1rem;
+
+}
+
+#what .items .item{
+  flex: 1;
+  text-align: center;
+  padding: 1rem;
+}
+
+#what .items .item i{
+  background: rgb(218, 102, 160);
+  color: black;
+  padding: 1rem;
+  border-radius: 40%;
+
+}
+
+/* section for who we are */
+#who{
+  display: flex;
+}
+
+#who div{
+  flex: 1;
+}
+
+#who .who-img{
+  background: url("../img/istockphoto-1171997413-612x612.jpg") no-repeat center center/cover
+}
+
+.bg-light{
+  background: #939393;
+  color: #333;
+}
+
+.bg-dark{
+  color: #f4f4f4;
+  background: #333;
+}
+
+.p-1{
+  padding: 1.5rem;
+}
+
+.p-2{
+  padding: 2rem;
+}
+
+.p-3{
+  padding: 3rem;
+}
+
+.list{
+  margin: 0.5rem 0;
+  list-style: none;
+}
+
+.list li{
+  padding: 0.5rem 0;
+  border-bottom: #444 dotted 1px ;
+}
+
+/* clients */
+#clients{
+  display: flex;
+  margin: 0 auto;
+  justify-content: center;
+  align-items: center;
+}
+
+#clients .items img{
+  display: block;
+  margin: auto 15px;
+  width: 90px;
+  height: 90px;
+}
