--- a/css/style.css
+++ b/css/style.css
@@ -19,11 +19,11 @@ p{
 }
 
 .text-primary{
-  color: aqua;
+  color: rgb(107, 238, 247);
 }
 /* code for the navbar */
 #navbar{
-  background: rgb(243, 135, 198);
+  background: rgb(226, 92, 148);
   color: rgb(23, 17, 29);
   top: 0;
   position: sticky;
@@ -54,7 +54,7 @@ ul{
 #showcase{
  background: url("../img/annie-spratt-cVEOh_JJmEE-unsplash.jpg") no-repeat center center/cover;
  height: 100vh;
- color: rgb(16, 171, 243);
+ color: rgb(14, 126, 107);
 }
 
 #showcase .show-content{
@@ -108,7 +108,7 @@ line-height: 1.1;
 
 .bg-dark{
   background: #000;
-  color: #fff;
+  color: rgb(1, 10, 10);
 }
 
 .container{
@@ -199,6 +199,7 @@ line-height: 1.1;
 .list{
   margin: 0.5rem 0;
   list-style: none;
+  display: block;
 }
 
 .list li{
@@ -246,3 +247,10 @@ line-height: 1.1;
   width: 100%;
   padding: 0.5rem;
 }
+
+.p-center{
+  text-align: center;
+}
+
+
+/* */
