--- a/css/mobile.css
+++ b/css/mobile.css
@@ -13,3 +13,59 @@
   align-self: center;
   margin-bottom: 0;
 }
+
+/* smartphones */
+@media (max-width: 500px){
+  #navbar{
+    flex-direction: column;
+    align-items: center;
+  }
+
+  #navbar .log{
+    margin-bottom: 0.5rem;
+    text-align: center;
+
+  }
+
+  #navbar ul{
+    padding: 0.5rem;
+  }
+
+  #showcase .showcase-content{
+    top: 110px;
+
+  }
+
+
+  #who{
+    display: block;
+  }
+
+  #who .who-img{
+    display: none;
+  }
+
+  #clients .items img{
+    width: 75%;
+    height: 70px;
+  }
+
+  #contact{
+
+  }
+
+  @media (max-height: 568px){
+    #showcase .showcase-content{
+      margin-top: -2rem;
+      top: 140px;
+    }
+
+    .l-leading{
+      font-style: 3rem;
+    }
+
+    .lead{
+      font-size: 1rem;
+    }
+  }
+}
